Cambios esteticos Creando editarBBDD

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet"  href="/ng-css/testBbdd.css"/>
     <link type="text/css" rel="stylesheet"  href="/ng-css/kirby.css"/>
     <link type="text/css" rel="stylesheet"  href="/ng-css/search.css"/>
+    <link type="text/css" rel="stylesheet"  href="/ng-css/editar.css"/>
 
     <script type="text/javascript" src="/js/lib/ngAngular.min.js"></script>
     <script type="text/javascript" src='/js/lib/ngAngularRoute.min.js'></script>
@@ -34,6 +35,9 @@
           </li>
           <li>
             <a href="#!/search">Buscador</a>
+          </li> 
+          <li>
+            <a href="#!/editar">Editar BBDD</a>
           </li> 
         </ul>
       </nav>
