--- a/src/main/webapp/ng-template/kirby.html
+++ b/src/main/webapp/ng-template/kirby.html
@@ -1,42 +1,76 @@
-<div id="wrapperKirby">
-  <div id="kirby">
-    <div id="body">
-      <div id="face">
-        <div id="eyes">
-          <div id="eyeLeft">
-            <div class="pupil">
-              <div class="iris">
-              </div>
-            </div>
-          </div>
-          <div id="eyeRight">
-            <div class="pupil">
-              <div class="iris">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="cheek">
-        </div>
-        <div id="mouth">
-          <div id="tongue">
-          </div>
-        </div>
-      </div>
-      <div id="wings">
-        <div id="wingLeft">
-        </div>
-        <div id="wingRight">
-        </div>
-      </div>
-      <div id="foo">
-        <div id="fooLeft">
-          <div></div>
-        </div>
-        <div id="fooRight">
-          <div></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="es">
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Bola Rosa</title>
+		<link rel="stylesheet" type="text/css" href="estilos.css">
+	</head>
+	<body>
+		<div id="cuerpo">
+			<div id="torso">
+
+				<div id="ojos">
+
+					<div id="ojoderecho">
+						<div class="pestanas">
+							<div class="pestana primera"></div>
+							<div class="pestana segunda"></div>
+							<div class="pestana tercera"></div>
+							<div class="pestana cuarta"></div>
+						</div>
+						<div class="pupila">
+							<div class="iris"></div>
+						</div>
+					</div>
+
+					<div id="ojoizquierdo">
+						<div class="pestanas">
+							<div class="pestana primera"></div>
+							<div class="pestana segunda"></div>
+							<div class="pestana tercera"></div>
+							<div class="pestana cuarta"></div>
+						</div>
+						<div class="pupila">
+							<div class="iris"></div>
+						</div>
+					</div>
+				</div>
+
+				<div id="mejillas">
+					<div id="mejillaD"></div>
+					<div id="mejillaI"></div>
+				</div>
+
+				<div id="boca">
+					<div id="lengua"></div>
+				</div>
+			
+			</div>
+			<div id="manos">
+				<div id="manod">
+					<div id="alad"></div>
+				</div>
+
+				<div id="manoi">
+					<div id="alai"></div>
+				</div>
+			</div>
+
+			<div id="pies"> 
+				<div id="pied">
+					<div id="patad"></div>
+				</div>
+
+				<div id="piei">
+					<div id="patai"></div>
+				</div>
+			</div>
+
+		</div>
+	
+
+
+	</body>
+
+
+</html>
