--- a/src/main/webapp/ng-template/search.html
+++ b/src/main/webapp/ng-template/search.html
@@ -1,7 +1,7 @@
 <div id="search">
 
   <fieldset id="searchWrapper">
-    <input type="text" ng-keyup="searchFn($event)" placeholder="Buscar Item"/>
+    <input type="text" ng-keyup="searchFn($event)" placeholder="Buscar"/>
     <div id="msg">
         <span>{{msg}}</span>
     </div>
