modificacion controller editar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,5 +53,6 @@
     <script type="text/javascript" src="/ng-controller/ngAppControllerAbout.js"></script>
     <script type="text/javascript" src="/ng-controller/ngAppControllerTestBbdd.js"></script>
     <script type="text/javascript" src="/ng-controller/ngAppControllerSearch.js"></script>
+    <script type="text/javascript" src="/ng-controller/ngAppControllerEditarBBDD.js"></script>
   </body>
 </html>
