--- a/src/main/webapp/ng-template/editar.html
+++ b/src/main/webapp/ng-template/editar.html
@@ -2,7 +2,7 @@
 
 
 <div id="lista">
-	<select>
+	<select id="listaTablas">
 		<option ng-repeat="x in getbbdd track by $index">Tabla {{$index + 1}} | {{x.table}}</option>
 	</select>
 </div>
